k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axion-ui
  labels:
    app: axion-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: axion-ui
